# obs-audio-router

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
installer/: install.ps1
src/: audio-receiver.cpp  audio-receiver.h  audio-sender.cpp  audio-sender.h  plugin-main.cpp  plugin-support.h  router-protocol.h
